--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,11 @@ on:
 jobs:
   build-and-deploy:
     name: Build and deploy
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     env:
       MY_SECRET   : ${{secrets.GH_ACCESS_TOKEN}}
       USER_NAME   : PolunLin
-      USER_EMAIL  : polunlin1019@gamil.com
+      USER_EMAIL  : polunlin1019@gmail.com
       BOOK_DIR    : book_sources
 
     steps:
