--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Checkout 🛎️
       uses: actions/checkout@v2.3.1
     - name: Build and Deploy 
-      uses: PolunLin/git_book@v1.0.0
+      uses: uses: onejar99/gitbook-build-publish-action@v1.0.1
